kustomize/overlays/dev/item-flow/pixta-epsfm/polling_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsfm-autocheck-poller
  labels:
    app: epsfm-autocheck-poller
    stage: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: epsfm-autocheck-poller
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: epsfm-autocheck-poller
        stage: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsfm-epscheck-poller
  labels:
    app: epsfm-epscheck-poller
    stage: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: epsfm-epscheck-poller
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: epsfm-epscheck-poller
        stage: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsfm-jpgcheck-poller
  labels:
    app: epsfm-jpgcheck-poller
    stage: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: epsfm-jpgcheck-poller
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: epsfm-jpgcheck-poller
        stage: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsfm-checktool-start-poller
  labels:
    app: epsfm-checktool-start-poller
    stage: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: epsfm-checktool-start-poller
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: epsfm-checktool-start-poller
        stage: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epsfm-checktool-result-poller
  labels:
    app: epsfm-checktool-result-poller
    stage: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: epsfm-checktool-result-poller
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: epsfm-checktool-result-poller
        stage: staging
